# sso-invitation-email-sender

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/: app.py
src/templates/: content.html
src/utils/: config.py  mail.py  token.py
