[tool.poetry]
name = "sso_invitation"
version = "0.1.0"
description = ""
authors = ["Hugo Duroux <infra@bimdata.io>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.0.4"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
requests = "^2.26.0"
Flask-Caching = "^1.10.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.5.1"
flake8 = "^3.9.2"
black = "^19.10b0"
reorder-python-imports = "^2.3.1"
pyflakes = "^2.3.1"
pycodestyle = "^2.7.0"

[tool.black]
line-length = 95

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
