[tool.poetry]
name = "sso_invitation"
version = "0.1.0"
description = ""
authors = ["Hugo Duroux <infra@bimdata.io>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
Flask = "^2.3.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
Flask-Caching = "^2.0.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
black = "^23.9.1"
reorder-python-imports = "^3.11.0"
pyflakes = "^3.1.0"
pycodestyle = "^2.11.0"

[tool.black]
line-length = 95

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
